# roselex

./: CMakeLists.txt  README.md  install-cmake.sh  run-benchmarks.sh
benchmarks/: main.cpp
data/: testwords.txt  words_basic.txt
include/: rl_bag.h  rl_board.h  rl_dawg.h  rl_distribution.h  rl_edgemap.h  rl_move.h  rl_node.h  rl_nodearray.h  rl_nodelookup.h  rl_preview.h  rl_rack.h  rl_search.h  rl_types.h  rl_util.h
src/: rl_bag.cpp  rl_board.cpp  rl_dawg.cpp  rl_distribution.cpp  rl_edgemap.cpp  rl_move.cpp  rl_node.cpp  rl_nodearray.cpp  rl_nodelookup.cpp  rl_preview.cpp  rl_rack.cpp  rl_search.cpp
tests/: main.cpp  rl_bag_tests.h  rl_dawg_tests.h  rl_distribution_tests.h  rl_edgemap_tests.h  rl_node_tests.h  rl_nodearray_tests.h  rl_nodelookup_tests.h  rl_rack_tests.h  rl_testing.h  rl_types_tests.h  testing.h
